--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   # Trigger the workflow on push or pull request,
   push:
     branches:
-      - master
+      - main
   workflow_dispatch: # 手动触发
   schedule:
     - cron: '30 0 * * *' #utc 换算北京时间+8
