--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Install chrome.exe and chromedriver
         run: |
+          sudo google-chrome --version
+          
           sudo apt-get update
           sudo apt-get install -y wget
           sudo apt-get install -y zip
