--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           sudo rm -rf ~/.config/chromium
           sudo rm -rf ~/.cache/chromium
           sudo rm -rf /etc/chromium
+          sudo rm -rf /usr/bin/chromium
           
           sudo google-chrome --version
           sudo apt-get purge google-chrome-stable
