--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,13 @@ jobs:
         run: |
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      - name: remove default chrome.exe
+        run: |
+          sudo google-chrome --version
+          sudo apt-get purge google-chrome-stable
+          sudo apt-get autoremove
+          sudo rm -rf ~/.config/google-chrome
+
       - name: Install chrome.exe and chromedriver
         run: |
           sudo apt-get update
